--- a/home.css
+++ b/home.css
@@ -72,6 +72,13 @@ h2 {
     font-size: 20px;
 }
 
+.page {
+    height: 800px;
+    width: 100%;
+    background-color: black;
+    margin: 0 20px 0 20px;
+}
+
 .categories {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr;
