--- a/home.css
+++ b/home.css
@@ -1,89 +1,89 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap%27');
 
-* {
+
+*{
     margin: 0;
     padding: 0;
-    text-decoration: none;
     box-sizing: border-box;
-    font-family: 'Poppins', sans-serif;
 }
+body{
 
-body {
-    background-color: #232528;
-    overflow-x: hidden;
+
+    /* / background color / */
+    background-color: rgb(18, 106, 207);
+    /* / height of the page / */
+    height: 100vh;
+    /* / font / */
+    font-family: poppins;
+
 }
 
 header {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    color: white;
-    height: 80px;
-    background-color: #f76d1d;
-    box-shadow: 0 0 10px 20px rgba(0, 0, 0, 0.2);
-
-}
-
-header a {
-    color: white;
-    margin-left: 20px;
-    user-select: none;
-    cursor: pointer;
-}
-
-.search {
+   /* / put the container in the top middle / */
     display: flex;
     justify-content: center;
     align-items: center;
-    height: auto;
+    height: 100px;
     width: 100%;
-}
+    background-color:#FFA400;
+    font-family: poppins;
 
-.searchBar {
-    width: 1200px;
-    height: 60px;
-    font-size: 30px;
-    background-color: #f1F1F1;
+
+}
+button {
+  /* / put this image as a background of the button / */
+ 
+    background-color: #FFA400;
     border: none;
+    height: 150px;
+    width: 400px;
     border-radius: 10px;
-    margin-top: 50px;
-    padding-left: 20px;
-}
-
-input[type="search"] {
-    outline: none;
-}
-
-.options {
-    display: flex;
-    align-items: center;
-    color: white;
-    user-select: none;
-}
-
-.options a {
-    margin-right: 25px;
-    color: white;
     cursor: pointer;
+    transition: 0.5s;
+    margin: 10px;
 }
 
-h2 {
-    color: white;
-    font-size: 20px;
-}
+.container {
+    /* / put the container in the top middle */ 
 
-.page {
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr;
-    grid-template-rows: 1fr 1fr 1fr 1fr;
-    grid-gap: 20px;
-    height: 700px;
+    height: 100vh;
     width: 100%;
-    color: white;
-    margin: 20px;
+    background-color: rgb(18, 106, 207);
+    font-family: poppins;
 }
+.sport{
+background-image: url(matériel-de-sport-2-22802518.jpg);
+background-size: cover;
+background-position: center;
 
-.categories {
-    background-color: #f76d1d;
-    border-radius: 15px;
+}
+.cinema{
+    background-image: url(8b9aabc3524870c8821d00aa1190f858.jpg);
+    background-size: cover;
+    background-position: center;
+
+}
+.music{
+    background-image: url(mzika.jpg);
+    background-size: cover;
+    background-position: center;
+
+}
+.hg{
+    background-image: url(hg.jpg);
+    background-size: cover;
+    background-position: center;
+
+}
+.geo{
+    background-image: url(https://static5.depositphotos.com/1000128/420/i/450/depositphotos_4209613-stock-photo-compass-on-the-map.jpg);
+    background-size: cover;
+    background-position: center;
+
+}
+.cg{
+    background-image: url(https://www.successcolaire.ca/blogue/wp-content/uploads/2020/03/culture-generale-examen-pratique-en-ligne-admission-secondaire-e1583165298977-1280x720.png);
+    background-size: cover;
+    background-position: center;
+
 }
