--- a/quizz.css
+++ b/quizz.css
@@ -10,7 +10,7 @@ body{
    
 
     /* background color */
-    background-color: rgb(18, 106, 207);
+    background-color: rgb(22, 26, 30);
     /* height of the page */
     height: 100vh;
     /* font */
@@ -47,8 +47,16 @@ button {
     /* put the container in the top middle */
     height: 100vh;
     width: 100%;
-    background-color: rgb(18, 106, 207);
+    background-color: rgb(22, 26, 30);
     font-family: poppins;
+    display: grid;
+    grid-template-rows: repeat(2, 1fr);
+    grid-gap: 10px;
+    padding: 10px;
+    box-sizing: border-box;
+    justify-content: center;
+ 
+    
 }
 
 .basket {
