--- a/style.css
+++ b/style.css
@@ -66,7 +66,10 @@ header a {
 .imgLogin {
     height: 100%;
     width: 50%;
-    background-color: rgb(143, 143, 143);
+    /* background-color: rgb(143, 143, 143); */
+    background-image: url("Quizzeo.gif");
+    background-size: cover;
+    background-position: center;
 }
 
 .login {
