--- a/home.css
+++ b/home.css
@@ -1,117 +1,100 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap%27');
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;700&display=swap%27');
 
-
-*{
+* {
     margin: 0;
     padding: 0;
+    text-decoration: none;
     box-sizing: border-box;
+    font-family: 'Poppins', sans-serif;
 }
-body{
 
-
-    /* / background color / */
-    background-color: rgb(22, 26, 30);
-    /* / height of the page / */
-    height: 100vh;
-    /* / font / */
-    font-family: poppins;
-    color: black;
-
+body {
+    background-color: #232528;
+    overflow-x: hidden;
 }
 
 header {
-   /* / put the container in the top middle / */
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    color: white;
+    height: 80px;
+    background-color: #f76d1d;
+    box-shadow: 0 0 10px 20px rgba(0, 0, 0, 0.2);
+
+}
+
+header a {
+    color: white;
+    margin-left: 20px;
+    user-select: none;
+    cursor: pointer;
+}
+
+.search {
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 100px;
+    height: auto;
     width: 100%;
-    background-color:#FFA400;
-    font-family: poppins;
-    
-
-
-}
-button {
-  /* / put this image as a background of the button / */
- 
-    background-color: #FFA400;
-    border: none;
-    height: 150px;
-    width: 400px;
-    border-radius: 10px;
-    cursor: pointer;
-    transition: 0.5s;
-    margin: 10px;
 }
 
-.container {
-    /* / put the container in the top middle */ 
-
-    height: 100vh;
-    width: 100%;
-    background-color: rgb(22, 26, 30);
-    font-family: poppins;
-    display: grid;
-    
-    grid-template-rows: repeat(2, 1fr);
-    grid-gap: 10px;
-    padding: 10px;
-    box-sizing: border-box;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
+.searchBar {
+    width: 1200px;
+    height: 60px;
     font-size: 30px;
-    color: white;
-    font-weight: 600;
+    background-color: #f1F1F1;
+    border: none;
+    border-radius: 10px;
+    margin: 50px 0 50px 0;
+    padding-left: 20px;
+}
 
-}
-.sport{
-background-image: url(matériel-de-sport-2-22802518.jpg);
-background-size: cover;
-background-position: center;
-
-}
-.cinema{
-    background-image: url(8b9aabc3524870c8821d00aa1190f858.jpg);
-    background-size: cover;
-    background-position: center;
-
-}
-.music{
-    background-image: url(mzika.jpg);
-    background-size: cover;
-    background-position: center;
-
-}
-.hg{
-    background-image: url(hg.jpg);
-    background-size: cover;
-    background-position: center;
-
-}
-.geo{
-    background-image: url(https://static5.depositphotos.com/1000128/420/i/450/depositphotos_4209613-stock-photo-compass-on-the-map.jpg);
-    background-size: cover;
-    background-position: center;
-
-}
-.cg{
-    background-image: url(https://www.successcolaire.ca/blogue/wp-content/uploads/2020/03/culture-generale-examen-pratique-en-ligne-admission-secondaire-e1583165298977-1280x720.png);
-    background-size: cover;
-    background-position: center;
-
-}
-button:hover {
-    transform: scale(1.1);
-}
-button:active {
-    transform: scale(0.9);
-}   
-button:focus {
+input[type="search"] {
     outline: none;
 }
 
+.options {
+    display: flex;
+    align-items: center;
+    color: white;
+    user-select: none;
+}
 
+.options a {
+    margin-right: 25px;
+    color: white;
+    cursor: pointer;
+}
 
+h2 {
+    color: white;
+    font-size: 35px;
+    margin-bottom: 15px;
+}
 
+.page {
+    height: 800px;
+    width: 100%;
+    margin: 0 20px 0 20px;
+}
+
+.categories {
+    display: grid;
+   display: grid;
+   grid-template-columns: repeat(4, 1fr);
+   grid-template-rows: repeat(4, 1fr);
+   grid-gap: 20px;
+    height: 700px;
+    width: 100%;
+    color: white;
+}
+
+button {
+    background-color: #f76d1d;
+    border-radius: 15px;
+    cursor: pointer;
+    border: none;
+    height: 200px;
+    width: 200px;
+}
