--- a/home.css
+++ b/home.css
@@ -1,23 +1,11 @@
-<<<<<<< HEAD
-@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;700&display=swap");
-
-* {
-  margin: 0;
-  padding: 0;
-  text-decoration: none;
-  box-sizing: border-box;
-  font-family: "Poppins", sans-serif;
-=======
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap%27');
 
-
-*{
+* {
     margin: 0;
     padding: 0;
+    text-decoration: none;
     box-sizing: border-box;
->>>>>>> 852f24c547555464188f69a953837b55ec708a82
 }
-body{
 
 
     /* / background color / */
@@ -28,11 +16,6 @@ body{
     font-family: poppins;
     color: black;
 
-<<<<<<< HEAD
-body {
-  background-color: #242424;
-  
-  overflow-x: hidden;
 }
 
 header {
@@ -112,115 +95,15 @@ h2 {
     color: white;
 }
 
-footer ul {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 100%;
-  list-style: none;
-}
-
-footer ul a {
-  color: white;
-  margin-right: 10px;
-}
-=======
-}
-
-header {
-   /* / put the container in the top middle / */
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100px;
-    width: 100%;
-    background-color:#FFA400;
-    font-family: poppins;
-    
-
-
-}
 button {
-  /* / put this image as a background of the button / */
- 
-    background-color: #FFA400;
-    border: none;
-    height: 150px;
-    width: 400px;
-    border-radius: 10px;
+    background-color: #f76d1d;
+    border-radius: 15px;
     cursor: pointer;
-    transition: 0.5s;
-    margin: 10px;
-}
-
-.container {
-    /* / put the container in the top middle */ 
-
-    height: 100vh;
-    width: 100%;
-    background-color: rgb(22, 26, 30);
-    font-family: poppins;
-    display: grid;
-    
-    grid-template-rows: repeat(2, 1fr);
-    grid-gap: 10px;
-    padding: 10px;
-    box-sizing: border-box;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
-    font-size: 30px;
-    color: white;
-    font-weight: 600;
-
-}
-.sport{
-background-image: url(matériel-de-sport-2-22802518.jpg);
-background-size: cover;
-background-position: center;
-
-}
-.cinema{
-    background-image: url(8b9aabc3524870c8821d00aa1190f858.jpg);
-    background-size: cover;
-    background-position: center;
-
-}
-.music{
-    background-image: url(mzika.jpg);
-    background-size: cover;
-    background-position: center;
-
-}
-.hg{
-    background-image: url(hg.jpg);
-    background-size: cover;
-    background-position: center;
-
-}
-.geo{
-    background-image: url(https://static5.depositphotos.com/1000128/420/i/450/depositphotos_4209613-stock-photo-compass-on-the-map.jpg);
-    background-size: cover;
-    background-position: center;
-
-}
-.cg{
-    background-image: url(https://www.successcolaire.ca/blogue/wp-content/uploads/2020/03/culture-generale-examen-pratique-en-ligne-admission-secondaire-e1583165298977-1280x720.png);
-    background-size: cover;
-    background-position: center;
-
-}
-button:hover {
-    transform: scale(1.1);
-}
-button:active {
-    transform: scale(0.9);
-}   
-button:focus {
-    outline: none;
+    border: none;
+    height: 200px;
+    width: 200px;
 }
 
 
 
 
->>>>>>> 852f24c547555464188f69a953837b55ec708a82
