--- a/panel.css
+++ b/panel.css
@@ -143,7 +143,7 @@ input[type="search"]::-webkit-search-decoration {
   padding: 25px;
 }
 
-.categories {
+#categories {
   display: grid;
   grid-template-columns: repeat(7, 1fr);
   grid-template-rows: repeat(4, 220px);
@@ -162,6 +162,7 @@ input[type="search"]::-webkit-search-decoration {
   align-items: center;
   background-color: #333333;
   border-radius: 15px;
+  user-select: none;
 }
 
 .imgCategorie .trash, .imgCategorie .edit {
