--- a/Inscription-Login-Quizz/style.css
+++ b/Inscription-Login-Quizz/style.css
@@ -84,7 +84,7 @@ header a span {
 
 #slogan {
   color: white;
-  font-size: 40px;
+  font-size: 30px;
   font-weight: 900;
   margin-bottom: 50px;
 }
@@ -214,4 +214,12 @@ footer ul a {
         box-shadow: transparent 0 0 0 30px;
 
     }
+}
+
+label {
+  color: black;
+}
+
+span {
+  color: black;
 }
