--- a/create2.css
+++ b/create2.css
@@ -94,8 +94,240 @@ header a span:last-child {
 }
 
 .container {
-  height: 829px;
+  display: flex;
+  justify-content: space-between;
+  flex-direction: column;
+  height: auto;
   width: 100%;
+  padding: 0 25px;
+}
+
+.info {
+  display: flex;
+  justify-content: space-between;
+  /* align-items: center; */
+  flex-direction: column;
+  height: 180px;
+  width: 100%;
+  color: white;
+  padding: 30px 0 30px 0;
+  animation: title 1s forwards;
+}
+
+.info h3 {
+  font-size: 45px;
+  font-weight: 900;
+}
+
+.info img {
+  height: 60px;
+  width: 60px;
+}
+
+.info2 {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 450px;
+}
+
+.info input {
+  height: 40px;
+  width: 400px;
+  font-size: 20px;
+  color: white;
+  background-color: #333333;
+  border: none;
+  border-radius: 10px;
+  padding-left: 12px;
+  box-shadow: 0 20px 20px 5px rgba(0, 0, 0, 0.1);
+  outline: none;
+}
+
+#pageCreate {
+  color: white;
+}
+
+.question {
+  display: flex;
+  align-items: center;
+  height: 60px;
+  width: 100%;
+  background-color: #333333;
+  border-radius: 100px;
+  cursor: pointer;
+  z-index: 2;
+  user-select: none;
+}
+
+.question:not(:first-child) {
+  margin-top: 18px;
+}
+
+.number {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 40px;
+  width: 40px;
+  border-radius: 100%;
+  border: 2px solid white;
+  margin-left: 10px;
+  margin: 0 10px 0 10px;
+}
+
+.question h3 {
+  font-size: 16px;
+  font-weight: 500;
+}
+
+.question input {
+  font-size: 16px;
+  font-weight: 500;
+  color: white;
+  width: 500px;
+  padding-left: 8px;
+  background-color: transparent;
+  border: none;
+  border-radius: 30px;
+  outline: none;
+}
+
+.trash {
+  display: none;
+  width: 30px;
+  height: 30px;
+  object-fit: cover;
+  transition: all 0.5s ease;
+  margin: 0 20px 0 auto;
+  cursor: pointer;
+}
+
+.question:hover .trash {
+  display: block;
+}
+
+.container-answer {
+  width: 100%;
+  height: 0;
+  background-color: #242424;
+  overflow: hidden;
+  margin-top: -30px;
+  margin-bottom: 48px;
+  border-radius: 0 0 25px 25px;
+  transition: height 0.5s ease;
+}
+
+.answer {
+  color: white;
+  background: rgb(43, 43, 43);
+  background: linear-gradient(
+    0deg,
+    rgba(43, 43, 43, 1) 0%,
+    rgba(51, 51, 51, 1) 100%
+  );
+  padding: 40px 20px 20px 60px;
+  user-select: none;
+}
+
+.answer div:not(:last-child) {
+  display: flex;
+  margin-bottom: 20px;
+}
+
+.letter {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 35px;
+  width: 35px;
+  border-radius: 100%;
+  border: 2px solid white;
+}
+
+label {
+  margin-right: 15px;
+}
+
+.container-answer input {
+  height: 35px;
+  width: 400px;
+  font-size: 12px;
+  color: white;
+  background-color: #242424;
+  border: none;
+  border-radius: 10px;
+  padding-left: 12px;
+  box-shadow: 0 20px 20px 5px rgba(0, 0, 0, 0.1);
+  outline: none;
+}
+
+.check {
+  display: flex;
+  align-items: center;
+  height: auto;
+  width: 100%;
+}
+
+.check img {
+  height: 20px;
+  width: 20px;
+  margin-right: 10px;
+}
+
+#correctAnswer {
+  height: 35px;
+  width: auto;
+  font-size: 12px;
+  color: white;
+  background-color: #242424;
+  border: none;
+  border-radius: 10px;
+  padding-left: 8px;
+  box-shadow: 0 20px 20px 5px rgba(0, 0, 0, 0.1);
+  outline: none;
+}
+
+.question2 {
+  width: 500px;
+  padding: 10px;
+  cursor: pointer;
+  background-color: lightgray;
+}
+
+.add {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 35px;
+  font-weight: 300;
+  margin-bottom: 18px;
+  border: 2px dashed white;
+  cursor: pointer;
+  user-select: none;
+}
+
+#button-submit {
+  height: 45px;
+  width: 120px;
+  font-size: 18px;
+  color: white;
+  background-color: #fa6031;
+  border: none;
+  border-radius: 35px;
+  float: right;
+  cursor: pointer;
+}
+
+#settings {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  position: absolute;
+  top: 0;
+  width: 100%;
+  height: 30px;
+  background-color: rgba(141, 141, 141, 0.5);
 }
 
 .icons {
