--- a/dashboard.css
+++ b/dashboard.css
@@ -413,6 +413,10 @@ form input:invalid:not([type="submit"]) {
   align-items: center;
 }
 
+.title {
+  animation: title 0.8s ease forwards;
+}
+
 .title div {
   height: 50px;
   width: 50px;
@@ -654,6 +658,7 @@ label {
   overflow-y: scroll;
   padding-right: 15px;
   border-radius: 8px;
+  user-select: none;
 }
 
 table {
@@ -682,60 +687,33 @@ td, th {
   color: rgb(255, 174, 0);
 }
 
-.user {
-  display: flex;
-  align-items: center;
-  height: 70px;
-  width: 100%;
-  border: 3px solid #1f1f1fbe;
-  border-radius: 100px;
-  margin-bottom: 18px;
-  cursor: pointer;
-  user-select: none;
-}
-
-.user h4 {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 200px;
-  color: #d4d4d4;
-  font-weight: 400;
-  font-size: 15px;
-}
-
 .trash,
 .edit {
   display: none;
-  width: 30px;
-  height: 30px;
+  width: 26px;
+  height: 26px;
   object-fit: cover;
   transition: all 0.5s ease;
   cursor: pointer;
 }
 
-.trash {
-  margin: 0 20px 0 0;
+tr:hover .trash, tr:hover .edit {
+  display: initial;
+}
+
+.edit:active, .trash:active {
+  transform: scale(0.8);
 }
 
 .edit {
-  margin: 0 20px 0 auto;
+  margin: 0 20px 0 0;
 }
 
-.user:hover .trash,
-.user:hover .edit {
-  display: block;
-}
-
-.user .Illustration {
+.Illustration {
   height: 100%;
   width: auto;
   object-fit: cover;
   transition: all 0.5s ease;
-}
-
-.user:hover .Illustration {
-  transform: scale(0.85);
 }
 
 .image {
@@ -817,5 +795,16 @@ footer ul a {
 
   100% {
     box-shadow: transparent 0 0 0 8px;
+  }
+}
+
+@keyframes title {
+  from {
+    transform: translateY(50px);
+    opacity: 0;
+  }
+  to {
+    transform: translateY(0);
+    opacity: 1;
   }
 }
