--- a/testalex/quiz/inscription2.css
+++ b/testalex/quiz/inscription2.css
@@ -9,14 +9,13 @@
 }
 
 body {
-  background: rgb(20, 20, 20);
+  background: rgb(15, 15, 15);
   /* background: linear-gradient(0deg, rgba(15,15,15,1) 0%, rgba(24,24,24,1) 100%); */
   background-size: cover;
   background-repeat: no-repeat;
   background-image: url("gradient.svg");
-  overflow-y: hidden;
-  overflow-x: hidden;
   transition: filter 0.4s ease;
+  overflow-x: hidden;
   animation: fade 1s forwards;
 }
 
@@ -49,157 +48,190 @@ header a span:last-child {
 
 .options {
   display: flex;
-  align-items: center;
-  height: 50px;
+  height: 45px;
   width: auto;
   color: white;
   user-select: none;
 }
 
-.options h2,
-#profil,
-#deconnexion {
+#connexion,
+.inscription {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 150px;
+  border-radius: 30px;
+  font-size: 16px;
+  cursor: pointer;
+  margin-right: 20px;
+  transition: all 0.4s ease;
+}
+
+.inscription a {
+  color: white;
+}
+
+.inscription {
+  color: white;
+  background-color: #ff5f45;
+  border: none;
+}
+
+#connexion {
+  color: #ff5f45;
+  border: 2px solid #ff5f45;
+}
+
+#connexion a {
+  color: #ff5f45;
+}
+
+.inscription2,
+.connexion2 {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
+  width: 175px;
+  border-radius: 30px;
+  font-size: 18px;
+  cursor: pointer;
+  margin-right: 20px;
+  transition: all 0.4s ease;
+}
+
+.inscription2 a {
+  color: white;
+}
+
+.inscription2 {
+  color: white;
+  background-color: #ff5f45;
+  border: none;
+}
+
+.connexion2 {
+  color: #ff5f45;
+  border: 2px solid #ff5f45;
+}
+
+.connexion2 a {
+  color: #ff5f45;
+}
+
+.options button:hover a {
+  color: #00352c;
+}
+
+.options button {
+  height: 40px;
+  width: 150px;
+  background-color: #ff5f45;
+  border: none;
+  border-radius: 30px;
+  color: white;
+  font-size: 16px;
+  cursor: pointer;
+  transition: all 0.4s ease;
+}
+
+.options button:hover {
+  color: #333333;
+  background-color: #f1f1f1;
+}
+
+#profile {
+  border-radius: 100%;
   margin-right: 30px;
 }
 
-.options h2 {
-  font-size: 18px;
-  font-weight: 500;
-}
-
-#profil {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 50px;
-  height: 50px;
-  border-radius: 100%;
-  border: #ff5f45 2px solid;
-}
-
-#profil img {
-  width: 85%;
-  height: 85%;
+#profile img {
+  width: 100%;
+  height: 100%;
   object-fit: cover;
 }
 
-#deconnexion {
+.container {
+  height: 829px;
+  width: 100%;
+}
+
+.container-login {
+  /* display: flex;
+  justify-content: center;
+  align-items: center; */
   height: 100%;
   width: auto;
+  padding-left: 185px;
 }
 
-#deconnexion img {
-  height: 100%;
-  width: 100%;
-  filter: invert(100%) brightness(200%);
-}
-
-.container {
-  /* height: 829px; */
-  height: 100%;
-  width: 100%;
-}
-
-.number-question {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: auto;
-  width: 100%;
-  color: white;
-  margin: 65px 0 25px 0;
-}
-
-.number-question h2:not(:last-child) {
-  font-size: 20px;
-  font-weight: 500;
-  background-color: #ff5f45;
-  padding: 15px 30px 15px 30px;
-  border-radius: 35px;
-  margin-right: 20px;
-}
-
-.container-countdown {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 60px;
-  width: 60px;
-  color: #242424;
-  border: #ff5f45 5px solid;
-  background-color: #f1f1f1;
-  border-radius: 100%;
-  animation: pulse s infinite;
-}
-
-.container-answer {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
-  height: 100%;
-  width: 100%;
+.imgLogin h2 {
+  font-size: 200px;
   color: white;
 }
 
-.container-answer h3 {
-  font-size: 25px;
-  font-weight: 500;
-  margin-bottom: 30px;
+.imgLogin span {
+  font-size: 150px;
+  color: white;
 }
 
 form {
   display: flex;
-  justify-content: center;
-  align-items: center;
   flex-direction: column;
+  width: auto;
 }
 
-.answers {
-  display: flex;
-}
-
-.answer {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 100px;
-  width: 300px;
-  color: #242424;
-  font-size: 18px;
-  font-weight: 500;
-  background-color: #f1f1f1;
-  border-radius: 50px;
-  margin: 20px;
-  cursor: pointer;
-  transition: all 0.4s ease;
-  user-select: none;
-}
-
-.answer.clicked {
+form input:not([type="submit"]),
+select {
   color: white;
-  background-color: #37aa59;
-}
-
-.answer:hover {
-  transform: scale(0.9);
-}
-
-input[type="radio"] {
-  margin-right: 10px;
-}
-
-button[type="submit"] {
-  height: 50px;
-  width: 200px;
+  background-image: linear-gradient(to left, rgb(15, 15, 15), rgb(24, 24, 24));
+  /* background-color: rgb(22, 22, 22); */
+  width: 400px;
+  padding: 15px;
   font-size: 16px;
-  color: white;
-  background-color: #37aa59;
-  border-radius: 25px;
+  margin-bottom: 20px;
   border: none;
-  margin-top: 30px;
-  animation: pulse 2s infinite;
+  outline: none;
+  border-radius: 10px;
+}
+
+option {
+  background-color: #161616;
+}
+
+form input:invalid:not([type="submit"]) {
+  border: 2px dashed rgba(255, 255, 255, 0.473);
+}
+
+input[type="submit"] {
+  height: 55px;
+  width: 175px;
+  font-size: 18px;
+  color: white;
+  background-color: #ff5f45;
+  border: none;
+  border-radius: 35px;
   cursor: pointer;
+}
+
+.other {
+  padding: 15px 0 15px 0;
+}
+
+.other span {
+  color: white;
+  font-size: 15px;
+  margin-right: 5px;
+}
+
+.other a {
+  color: #ff5f45;
+  font-size: 15px;
+  text-decoration: none;
+}
+
+.other a:hover {
+  text-decoration: underline;
 }
 
 .icons {
@@ -211,16 +243,15 @@ button[type="submit"] {
   width: 100%;
   height: 100%;
   object-fit: cover;
-  transform-origin: center;
   animation: move-icon 10s ease-in-out infinite alternate;
 }
 
 .icons img:nth-child(1) {
   height: 140px;
   width: 140px;
-  top: 450px;
+  top: 0;
   left: 90px;
-  rotate: 137deg;
+  rotate: 19deg;
   /* filter: blur(3px); */
 }
 
@@ -228,27 +259,27 @@ button[type="submit"] {
   height: 110px;
   width: 110px;
   top: -135px;
-  left: 200px;
-  rotate: -171deg;
+  left: 260px;
+  rotate: -46deg;
   /* filter: blur(3px); */
   z-index: -1;
 }
 
 .icons img:nth-child(3) {
-  height: 150px;
-  width: 150px;
-  top: 280px;
-  left: 320px;
-  rotate: -42deg;
+  height: 120px;
+  width: 120px;
+  top: 190px;
+  left: 470px;
+  rotate: -162deg;
   z-index: -1;
 }
 
 .icons img:nth-child(4) {
-  height: 180px;
-  width: 180px;
-  top: 570px;
-  left: 580px;
-  rotate: 147deg;
+  height: 200px;
+  width: 200px;
+  top: 500px;
+  left: 460px;
+  rotate: -177deg;
   /* filter: blur(3px); */
   z-index: -1;
 }
@@ -256,8 +287,8 @@ button[type="submit"] {
 .icons img:nth-child(5) {
   height: 200px;
   width: 200px;
-  top: -250px;
-  left: 740px;
+  top: -200px;
+  left: 440px;
   rotate: 147deg;
   /* filter: blur(3px); */
   z-index: -1;
@@ -266,7 +297,7 @@ button[type="submit"] {
 .icons img:nth-child(6) {
   height: 230px;
   width: 230px;
-  top: 250px;
+  top: 260px;
   left: 570px;
   rotate: -70deg;
   /* filter: blur(3px); */
@@ -276,8 +307,8 @@ button[type="submit"] {
 .icons img:nth-child(7) {
   height: 150px;
   width: 150px;
-  top: 100px;
-  left: 720px;
+  top: -80px;
+  left: 650px;
   rotate: -90deg;
   /* filter: blur(3px); */
   z-index: -1;
@@ -327,17 +358,3 @@ footer ul a {
     opacity: 1;
   }
 }
-
-@keyframes pulse {
-  0% {
-    box-shadow: #37aa59 0 0 0 0;
-  }
-
-  100% {
-    box-shadow: transparent 0 0 0 20px;
-  }
-}
-
-
-
-
