--- a/creation.css
+++ b/creation.css
@@ -49,31 +49,30 @@ header a span:last-child {
 .options {
   display: flex;
   align-items: center;
-  height: 50px;
-  width: auto;
   color: white;
   user-select: none;
-}
-
-.options h2,
-#profil,
-#deconnexion {
-  margin-right: 30px;
 }
 
 .options h2 {
   font-size: 18px;
   font-weight: 500;
+  margin-right: 20px;
+}
+
+.options a {
+  cursor: pointer;
+  transition: all 0.5s ease;
 }
 
 #profil {
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 50px;
-  height: 50px;
+  width: 45px;
+  height: 45px;
+  border: 2px solid #ff5f45;
   border-radius: 100%;
-  border: #ff5f45 2px solid;
+  margin-right: 25px;
 }
 
 #profil img {
@@ -104,19 +103,18 @@ header a span:last-child {
 
 .info {
   display: flex;
-  justify-content: space-between;
-  /* align-items: center; */
-  flex-direction: column;
-  height: 180px;
+  align-items: center;
+  height: auto;
   width: 100%;
   color: white;
-  padding: 30px 0 30px 0;
+  margin: 0 0 20px 0;
   animation: title 1s forwards;
 }
 
 .info h3 {
   font-size: 45px;
   font-weight: 900;
+  margin-right: 20px;
 }
 
 .info img {
@@ -124,17 +122,10 @@ header a span:last-child {
   width: 60px;
 }
 
-.info2 {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  width: 450px;
-}
-
-.info input {
+#input-title {
   height: 40px;
   width: 400px;
-  font-size: 20px;
+  font-size: 18px;
   color: white;
   background-color: #333333;
   border: none;
@@ -142,6 +133,7 @@ header a span:last-child {
   padding-left: 12px;
   box-shadow: 0 20px 20px 5px rgba(0, 0, 0, 0.1);
   outline: none;
+  margin-bottom: 18px;
 }
 
 #pageCreate {
@@ -154,7 +146,7 @@ header a span:last-child {
   height: 60px;
   width: 100%;
   background-color: #333333;
-  border-radius: 100px;
+  border-radius: 14px;
   cursor: pointer;
   z-index: 2;
   user-select: none;
@@ -214,7 +206,7 @@ header a span:last-child {
   overflow: hidden;
   margin-top: -30px;
   margin-bottom: 48px;
-  border-radius: 0 0 25px 25px;
+  border-radius: 0 0 14px 14px;
   transition: height 0.5s ease;
 }
 
@@ -301,6 +293,7 @@ label {
   align-items: center;
   font-size: 35px;
   font-weight: 300;
+  background-color: transparent;
   margin-bottom: 18px;
   border: 2px dashed white;
   cursor: pointer;
