--- a/quiz.css
+++ b/quiz.css
@@ -14,8 +14,8 @@ body {
   background-size: cover;
   background-repeat: no-repeat;
   background-image: url("gradient.svg");
-  overflow-y: hidden;
-  overflow-x: hidden;
+  /* overflow-y: hidden;
+  overflow-x: hidden; */
   transition: filter 0.4s ease;
   animation: fade 1s forwards;
 }
@@ -50,31 +50,30 @@ header a span:last-child {
 .options {
   display: flex;
   align-items: center;
-  height: 50px;
-  width: auto;
   color: white;
   user-select: none;
-}
-
-.options h2,
-#profil,
-#deconnexion {
-  margin-right: 30px;
 }
 
 .options h2 {
   font-size: 18px;
   font-weight: 500;
+  margin-right: 20px;
+}
+
+.options a {
+  cursor: pointer;
+  transition: all 0.5s ease;
 }
 
 #profil {
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 50px;
-  height: 50px;
+  width: 45px;
+  height: 45px;
+  border: 2px solid #ff5f45;
   border-radius: 100%;
-  border: #ff5f45 2px solid;
+  margin-right: 25px;
 }
 
 #profil img {
@@ -189,7 +188,7 @@ input[type="radio"] {
   margin-right: 10px;
 }
 
-button[type="submit"] {
+#submit {
   height: 50px;
   width: 200px;
   font-size: 16px;
@@ -197,8 +196,14 @@ button[type="submit"] {
   background-color: #37aa59;
   border-radius: 25px;
   border: none;
-  margin-top: 30px;
   animation: pulse 2s infinite;
+  cursor: pointer;
+}
+
+.test {
+  height: 100px;
+  width: 100px;
+  background-color: red;
   cursor: pointer;
 }
 
