--- a/modif.css
+++ b/modif.css
@@ -10,7 +10,7 @@
 
 body {
   background: rgb(20, 20, 20);
-  background: linear-gradient(0deg, rgba(15,15,15,1) 0%, rgba(24,24,24,1) 100%);
+  /* background: linear-gradient(0deg, rgba(15,15,15,1) 0%, rgba(24,24,24,1) 100%); */
   background-size: cover;
   background-repeat: no-repeat;
   background-image: url("gradient.svg");
