--- a/quiz.css
+++ b/quiz.css
@@ -177,7 +177,7 @@ input[type="radio"] {
   margin-right: 10px;
 }
 
-#submit {
+button[type="submit"] {
   height: 50px;
   width: 200px;
   font-size: 16px;
@@ -185,6 +185,7 @@ input[type="radio"] {
   background-color: #37aa59;
   border-radius: 25px;
   border: none;
+  margin-top: 30px;
   animation: pulse 2s infinite;
   cursor: pointer;
 }
