--- a/creation.css
+++ b/creation.css
@@ -99,7 +99,7 @@ header a span:last-child {
   padding: 0 25px;
 }
 
-.info {
+.info-container {
   display: flex;
   align-items: center;
   height: auto;
@@ -109,18 +109,18 @@ header a span:last-child {
   animation: title 1s forwards;
 }
 
-.info h3 {
-  font-size: 45px;
-  font-weight: 900;
-  margin-right: 20px;
+.info-container h2 {
+  font-size: 20px;
+  font-weight: 500;
+  margin-right: 15px;
 }
 
-.info img {
+.info-container img {
   height: 60px;
   width: 60px;
 }
 
-#input-title {
+.input-quiz {
   height: 40px;
   width: 400px;
   font-size: 18px;
@@ -131,7 +131,11 @@ header a span:last-child {
   padding-left: 12px;
   box-shadow: 0 20px 20px 5px rgba(0, 0, 0, 0.1);
   outline: none;
-  margin-bottom: 18px;
+  margin-right: 15px;
+}
+
+.difficulty {
+  width: auto;
 }
 
 #pageCreate {
