--- a/creation.css
+++ b/creation.css
@@ -109,6 +109,12 @@ header a span:last-child {
   animation: title 1s forwards;
 }
 
+.info-container h1 {
+  font-size: 45px;
+  font-weight: 900;
+  margin-right: 15px;
+}
+
 .info-container h2 {
   font-size: 20px;
   font-weight: 500;
