--- a/creation.css
+++ b/creation.css
@@ -121,7 +121,7 @@ header a span:last-child {
   width: 400px;
   font-size: 18px;
   color: white;
-  background-color: #333333;
+  background-color: #1c1c1c;
   border: none;
   border-radius: 10px;
   padding-left: 12px;
@@ -143,11 +143,18 @@ header a span:last-child {
   align-items: center;
   height: 60px;
   width: 100%;
-  background-color: #333333;
-  border-radius: 14px;
+  background-color: #1c1c1c;
+  border-radius: 8px;
   cursor: pointer;
   z-index: 2;
   user-select: none;
+  overflow: hidden;
+}
+
+.test {
+  height: 100%;
+  width: 4px;
+  background-color: #ff5f45;
 }
 
 .question:not(:first-child) {
@@ -200,12 +207,7 @@ header a span:last-child {
 
 .answer {
   color: white;
-  background: rgb(43, 43, 43);
-  background: linear-gradient(
-    0deg,
-    rgba(43, 43, 43, 1) 0%,
-    rgba(51, 51, 51, 1) 100%
-  );
+  background: #1c1c1c;
   padding: 40px 20px 20px 60px;
   user-select: none;
 }
