--- a/creation.css
+++ b/creation.css
@@ -318,13 +318,11 @@ label {
 }
 
 ::-webkit-scrollbar-track {
-  background-color: #1f1f1fbe;
-  border-radius: 10px;
+  background-color: #1c1c1c;
 }
 
 ::-webkit-scrollbar-thumb {
   border-radius: 10px;
   background-color: #444444;
-  border-radius: 10px;
   background-clip: content-box;
 }
