--- a/quiz.css
+++ b/quiz.css
@@ -164,7 +164,7 @@ form {
   user-select: none;
 }
 
-a .clicked {
+.clicked {
   color: white;
   background-color: #37aa59;
 }
@@ -186,8 +186,9 @@ button[type="submit"] {
   border-radius: 25px;
   border: none;
   margin-top: 30px;
-  animation: pulse 2s infinite;
+  /* animation: pulse 2s infinite; */
   cursor: pointer;
+  user-select: none;
 }
 
 .test {
@@ -278,29 +279,6 @@ button[type="submit"] {
   z-index: -1;
 }
 
-footer {
-  display: flex;
-  justify-content: space-evenly;
-  align-items: center;
-  flex-direction: column;
-  height: 100px;
-  width: 100%;
-  color: white;
-}
-
-footer ul {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 100%;
-  list-style: none;
-}
-
-footer ul a {
-  color: white;
-  margin-right: 10px;
-}
-
 @keyframes move-icon {
   0% {
     transform: translateX(0);
@@ -333,6 +311,14 @@ footer ul a {
   }
 }
 
+.shake {
+  animation: shake 0.1s;
+}
 
+@keyframes shake {
+  0% {transform: translate(5px, 0);}
+  50% {transform: translate(-5px, 0);}
+  100% {transform: translate(5px, -0);}
+}
 
 
