--- a/dashboard.css
+++ b/dashboard.css
@@ -11,9 +11,8 @@
 body {
   height: 100%;
   background: rgb(20, 20, 20);
-  /* background: linear25-gradient(0deg, rgba(15,15,15,1) 0%, rgba(24,24,24,1) 100%); */
-  background-size: cover;
-  background-repeat: no-repeat;
+  /* background-size: cover; */
+  /* background-repeat: no-repeat; */
   /* background-image: url("gradient.svg"); */
   transition: filter 0.4s ease;
   /* overflow: hidden; */
@@ -85,9 +84,9 @@ header a span:last-child {
 .container {
   display: flex;
   height: 100%;
-  width: 100%;
+  max-width: 100%;
   padding: 25px;
-  /* overflow: hidden; */
+  box-sizing: border-box;
 }
 
 .categories {
@@ -219,66 +218,51 @@ header a span:last-child {
 
 #statistics {
   display: flex;
-  height: 300px;
-  width: 100%;
+  flex-wrap: wrap;
 }
 
-#box {
-  flex-grow: 1;
-  flex-basis: 0;
+#statistics > .box {
   display: flex;
   justify-content: space-between;
   flex-direction: column;
+  width: 16vw;
+  height: 16vw;
   background-color: #1f1f1fbe;
-  flex-grow: 1;
-  margin-right: 20px;
+  aspect-ratio: 1 / 1;
+  padding: 8px;
+  margin: 15px;
   border-radius: 20px;
+  flex-grow: 1;
 }
 
-#box:first-child {
-  flex-grow: 2;
-}
-
-#box:last-child {
+.box:last-child {
   margin-right: 0;
 }
 
-#box h3 {
+.box h3 {
   color: #8c8c8c;
   font-size: 20px;
   font-weight: 400;
   margin: 20px 0 0 20px;
 }
 
-#box .number {
+.box .number {
   font-size: 80px;
 }
 
-#box #date {
+.box #date {
   font-size: 40px;
 }
 
-#box p {
+.box p {
   color: white;
   font-size: 50px;
   font-weight: 500;
   margin: 0 0 0 20px;
 }
 
-#box h3:last-child {
+.box h3:last-child {
   color: #ff5f45;
-  margin: 0 0 20px 20px;
-}
-
-#box:nth-child(5) div {
-  height: 40px;
-  width: 40px;
-}
-
-#box img {
-  height: 100%;
-  width: 100%;
-  object-fit: cover;
   margin: 0 0 20px 20px;
 }
 
@@ -304,8 +288,7 @@ label {
   border: none;
 }
 
-.button-save,
-.button-cancel {
+.button-save {
   height: 40px;
   width: 175px;
   font-size: 18px;
@@ -320,11 +303,6 @@ label {
 .buttons {
   display: flex;
   align-items: center;
-}
-
-.button-cancel {
-  color: white;
-  background-color: #1f1f1f;
 }
 
 .button-save:active {
@@ -408,7 +386,7 @@ label {
   display: flex;
   justify-content: space-between;
   flex-direction: column;
-  height: 700px;
+  height: 40vw;
   margin-right: 20px;
   background-color: #1f1f1fbe;
   border-radius: 15px;
