--- a/home.css
+++ b/home.css
@@ -172,7 +172,7 @@ header a span:last-child {
   justify-content: space-evenly;
   align-items: center;
   flex-direction: column;
-  height: 250px;
+  height: 220px;
   width: 100%;
 }
 
@@ -180,6 +180,7 @@ header a span:last-child {
   color: white;
   font-size: 38px;
   font-weight: 800;
+  animation: title 1s forwards;
 }
 
 .search-container2 {
@@ -317,6 +318,17 @@ footer ul a {
     opacity: 0;
   }
   to {
+    opacity: 1;
+  }
+}
+
+@keyframes title {
+  from {
+    transform: translateY(50px);
+    opacity: 0;
+  }
+  to {
+    transform: translateY(0);
     opacity: 1;
   }
 }
