--- a/inscription.css
+++ b/inscription.css
@@ -85,13 +85,13 @@ form {
 form input:not([type="submit"]),
 select {
   color: white;
-  background-color: #1f1f1f;
+  background-color: transparent;
   height: 3vw;
   width: 25vw;
   padding: 15px;
   font-size: 16px;
   margin-bottom: 20px;
-  border: none;
+  border: 2px solid #f1f1f1;
   outline: none;
   border-radius: 10px;
 }
@@ -101,7 +101,7 @@ option {
 }
 
 form input:invalid:not([type="submit"]) {
-  border: 2px dashed rgba(255, 255, 255, 0.473);
+  border: 2px solid rgba(255, 255, 255, 0.473);
 }
 
 input[type="submit"] {
