--- a/home.css
+++ b/home.css
@@ -19,7 +19,8 @@ header {
   align-items: center;
   justify-content: space-between;
   color: white;
-  height: 100px;}
+  height: 100px;
+}
 
 .home {
   margin-left: 35px;
